--- a/README
+++ b/README
@@ -1,1 +1,6 @@
 jQuery plugin to embedd Facebook photo albums in any website.
+
+Parameters:
+	- pageId:	The Id of the Facebook page. Can be the Id or the username
+	- exclude:	Ids of the albums you don't want to display. e.g. ['352683711441378','196199743756443']
+	- lb:		Parameters for the lightbox plugin. Please check http://leandrovieira.com/projects/jquery/lightbox/
